# rust_nucleo_f091rc_blinky

./: Cargo.toml  memory.x  openocd.gdb
.cargo/: config.toml
src/: main.rs
