[package]
authors = ["Dawialki <136011729+Dawialki@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "nucleo_f091rc_blinky"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.4"
stm32f0xx-hal = { version = "0.18", features = ["stm32f091"]}

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo_f091rc_blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
